--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <title>Landing Page</title>
@@ -7,21 +8,24 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="container">
         <header>
             <div class="header-div wide-margin">
                 <div class="header-logo-div">
                     <h1>Header Logo</h1>
                 </div>
+
                 <nav>
                     <ul>
-                        <li><a href="#images-section-id">header one</a></li>
-                        <li><a href="#quote-section-id">header two</a></li>
-                        <li><a href="#action-section-id">header three</a></li>
+                        <li><a href="#">Header one</a></li>
+                        <li><a href="#quote-section-id">Header two</a></li>
+                        <li><a href="https://www.instagram.com/ya_sh00001/">Contact</a></li>
                     </ul>
                 </nav>
+
             </div>
         </header>
+
         <main>
             <section class="hero-section">
                 <div class="wide-margin flex-row">
@@ -30,7 +34,7 @@
                             <h2 class="hero-heading">This website is awesome</h2>
                             <p>This website has some subtext that goes here under the main title. It's a smaller font
                                 and the color is lower contrast.</p>
-                            <button>Sign up</button>
+                            <button class="wrapper">Sign up</button>
                         </div>
                     </div>
                     <div class="half-div">
