--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <nav>
                     <ul>
                         <li><a href="#">Header one</a></li>
-                        <li><a href="https://www.linkedin.com/in/ya-sh00001/>LinkedIn</a></li>
-                        <li><a href="https://www.instagram.com/ya_sh00001/">Contact</a></li>
+                        <li><a href="https://www.linkedin.com/in/ya-sh00001/"> LinkedIn</a></li>
+                        <li><a href="https://www.instagram.com/ya_sh00001/"> Contact</a></li>
                     </ul>
                 </nav>
 
