--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <nav>
                     <ul>
                         <li><a href="#images-section-id">header one</a></li>
-                        <li><a href="#quote-section-id">header two</a></li>
-                        <li><a href="#action-section-id">header three</a></li>
+                        <li><a href="https://www.linkedin.com/in/ya-sh00001/">LinkedIn </a></li>
+                        <li><a href="https://www.instagram.com/ya_sh00001">Contact</a></li>
                     </ul>
                 </nav>
             </div>
